--- a/projeto-final/bicicletas/magic.html
+++ b/projeto-final/bicicletas/magic.html
@@ -8,8 +8,10 @@
       name="description"
       content="Produto Bicicleta Nimbus Stark Bikcraft"
     />
+    <link rel="icon" href="../favicon.svg" type="image/svg+xml" />
     <title>Magic Might | Bikcraft</title>
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="preload" href="./css/style.min.css" as="style" />
+    <link rel="stylesheet" href="./css/style.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
