--- a/projeto-final/index.html
+++ b/projeto-final/index.html
@@ -8,9 +8,11 @@
       name="description"
       content="Bicicletas feitas sob medida. Projeto do curso Origamid"
     />
+
+    <link rel="icon" href="./favicon.svg" type="image/svg+xml">
     <title>Projeto Final Bikcraft</title>
-    <link rel="preload" href="./css/style.css" as="style" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preload" href="./css/style.min.css" as="style" />
+    <link rel="stylesheet" href="./css/style.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
