--- a/projeto-final/termos.html
+++ b/projeto-final/termos.html
@@ -5,7 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Termos e condições Bikcraft">
-  <title>Termos e Condições | Bikcraft</title>
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
+    <title>Termos e Condições | Bikcraft</title>
      <link rel="preload" href="./css/style.css" as="style">
     <link rel="stylesheet" href="./css/style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
